fixing the api/static to run on the same host
