# models/learning_resource_input.go
@@ -1,35 +1,0 @@
-package models
-
-import (
-	"github.com/go-swagger/go-swagger/errors"
-	"github.com/go-swagger/go-swagger/strfmt"
-)
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-/*LearningResourceInput LearningResourceInput learning resource input
-
-swagger:model LearningResourceInput
-*/
-type LearningResourceInput struct {
-	LearningResource
-
-	/* ID id
-	 */
-	ID int64 `json:"id,omitempty"`
-}
-
-// Validate validates this learning resource input
-func (m *LearningResourceInput) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.LearningResource.Validate(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
